--- a/03-stateful-application/deployment-mariadb.yml
+++ b/03-stateful-application/deployment-mariadb.yml
@@ -1,40 +1,40 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: special-config
+  name: mariadb-config
   namespace: default
 data:
   MYSQL_DATABASE: test_db
   MYSQL_USER: test_user
   MYSQL_PASSWORD: test_pass
-  MYSQL_RANDOM_ROOT_PASSWORD: yes
+  MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: 03-mariadb
+  name: mariadb
 spec:
   replicas: 1
   selector:
     matchLabels:
-      component: 03-mariadb-label
+      component: mariadb-label
   template:
     metadata:
       labels:
-        component: 03-mariadb-label
+        component: mariadb-label
     spec:
       volumes:
-        - name: 03-mariadb-volume
+        - name: mariadb-volume
           emptyDir: {}
       containers:
-        - name: 03-mariadb
+        - name: mariadb
           image: mariadb
           volumeMounts:
           - mountPath: "/var/lib/mysql"
-            name: 03-mariadb-volume
+            name: mariadb-volume
           envFrom:
           - configMapRef:
-              name: 03-mariadb-config
+              name: mariadb-config
 ---
 apiVersion: v1
 kind: Service
@@ -47,4 +47,4 @@ spec:
       targetPort: 3306
       nodePort: 30006
   selector:
-    component: 03-mariadb-label
+    component: mariadb-label
