--- a/03-stateful-application/containers/python/Dockerfile
+++ b/03-stateful-application/containers/python/Dockerfile
@@ -1,7 +1,10 @@
-FROM python
+FROM python:3
 
-WORKDIR /usr/local/bin
+WORKDIR /usr/src/app
+
+COPY code/requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY code/test.py .
 
-CMD ["test.py"]
+CMD [ "python", "./test.py" ]
