adding clusterIP to mariadb

--- a/03-stateful-application/containers/mariadb/Dockerfile
+++ b/03-stateful-application/containers/mariadb/Dockerfile
@@ -1,1 +1,8 @@
 FROM mariadb
+
+ENV foo /bar
+ENV MYSQL_DATABASE test_db
+ENV MYSQL_USER test_user
+ENV MYSQL_PASSWORD test_pass
+ENV MYSQL_RANDOM_ROOT_PASSWORD yes
+
