--- a/03-stateful-application/deployment-mariadb.yml
+++ b/03-stateful-application/deployment-mariadb.yml
@@ -38,13 +38,14 @@ spec:
 ---
 apiVersion: v1
 kind: Service
-metadata:
-  name: mariadb-node-port
+metadata:  
+  name: mariadb-clusterip
 spec:
-  type: NodePort
-  ports:
-    - port: 3306
-      targetPort: 3306
-      nodePort: 30006
-  selector:
+  selector:    
     component: mariadb-label
+  type: ClusterIP
+  ports:  
+  - name: mariadb
+    port: 3306
+    targetPort: 3306
+    protocol: TCP
