updating docker registry links

--- a/01-simple-application/web.yml
+++ b/01-simple-application/web.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: web-container
-          image: andrewmcshanevaltech/web
+          image: mrmcshane/web
           ports:
             - containerPort: 80
 ---
