--- a/03-stateful-application/deployment-python.yml
+++ b/03-stateful-application/deployment-python.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: python
-          image: andrewmcshanevaltech/python
+          image: mrmcshane/python
           ports:
           - containerPort: 80
 ---
