--- a/06-helm/Chart.yaml
+++ b/06-helm/Chart.yaml
@@ -1,5 +1,10 @@
 apiVersion: v1
 appVersion: "1.0"
-description: A Helm chart for Kubernetes
-name: 05-helm
+description: A basic helm chart to deploy custom python app
+name: 06-helm
 version: 0.1.0
+sources:
+  - https://github.com/mrmcshane/k8s-training
+  - https://github.com/valtech-uk/kubernetes-training
+maintainers:
+  - name: mrmcshane
