--- a/06-helm/templates/ingress.yaml
+++ b/06-helm/templates/ingress.yaml
@@ -1,36 +1,15 @@
-{{- if .Values.ingress.enabled -}}
-{{- $fullName := include "05-helm.fullname" . -}}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
-  labels:
-{{ include "05-helm.labels" . | indent 4 }}
-  {{- with .Values.ingress.annotations }}
+  name: "ingress-{{ .Chart.Name }}"
   annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    nginx.ingress.kubernetes.io/ssl-redirect: {{ .Values.ingress.annotations.ssl-redirect }}
+    ingress.kubernetes.io/add-base-url: {{ .Values.ingress.annotations.add-base-url }}
 spec:
-{{- if .Values.ingress.tls }}
-  tls:
-  {{- range .Values.ingress.tls }}
-    - hosts:
-      {{- range .hosts }}
-        - {{ . | quote }}
-      {{- end }}
-      secretName: {{ .secretName }}
-  {{- end }}
-{{- end }}
   rules:
-  {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
-      http:
-        paths:
-        {{- range .paths }}
-          - path: {{ . }}
-            backend:
-              serviceName: {{ $fullName }}
-              servicePort: http
-        {{- end }}
-  {{- end }}
-{{- end }}
+  - host: {{ .Values.ingress.hosts.host }}
+    http:
+      paths:
+      - backend:
+          serviceName: {{ .Values.python.name }}
+          servicePort: {{ .Values.python.service.port }}
