--- a/06-helm/values.yaml
+++ b/06-helm/values.yaml
@@ -1,50 +1,52 @@
-# Default values for 05-helm.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# customisable variables for 06-helm
 
-replicaCount: 1
-
-image:
-  repository: nginx
-  tag: stable
-  pullPolicy: IfNotPresent
-
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
-
-service:
-  type: ClusterIP
-  port: 80
+global:
+  name: 06-helm
 
 ingress:
-  enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  annotations:
+    ssl-redirect: "false"
+    add-base-url: "true"
   hosts:
-    - host: chart-example.local
+    - host: 06-helm.xn--w28h.to
       paths: []
 
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+python:
+  name: python
+  replicaCount: 3
+  image:
+    repository: mrmcshane/orange-python
+    version: latest
+    pullPolicy: Always
+  imagePullSecrets: []
+  service:
+    type: ClusterIP
+    port: 80
+  resources: {}
+  nodeSelector: {}
+  tolerations: []
+  labels: []
+  affinity: {}
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
+vault:
+  name: vault
+  replicaCount: 1
+  image:
+    repository: vault
+    version: stable
+    pullPolicy: IfNotPresent
+  command: /bin/sh -c "chown vault:vault /mnt/vault/file && /bin/vault server -config /home/vault/config.json"
+  imagePullSecrets: []
+  service:
+    type: ClusterIP
+    port: 8200
+  resources: {}
+  nodeSelector: {}
+  tolerations: []
+  labels: []
+  affinity: {}
+  volume:
+    name: vault-fs
+    capacity: 10Gi
+    host-path: "/mnt/data"
+    mount-path: 
