--- a/04-namespaces/deployment-blue.yml
+++ b/04-namespaces/deployment-blue.yml
@@ -77,7 +77,7 @@ spec:
     spec:
       containers:
         - name: python
-          image: mrmcshane/python
+          image: mrmcshane/python:04-blue
           ports:
           - containerPort: 80
 ---
@@ -87,10 +87,10 @@ metadata:
   name: python-lb
   namespace: blue
 spec:
-  type: LoadBalancer
-  loadBalancerIP: 34.76.79.47
-  ports:
-    - port: 80
-      targetPort: 80
+  type: NodePort
+  ports:  
+  - port: 80
+    targetPort: 80
+    nodePort: 30041
   selector:
     component: python-label
