--- a/04-namespaces/deployment-green.yml
+++ b/04-namespaces/deployment-green.yml
@@ -77,7 +77,7 @@ spec:
     spec:
       containers:
         - name: python
-          image: mrmcshane/python
+          image: mrmcshane/python:04-green
           ports:
           - containerPort: 80
 ---
@@ -87,10 +87,10 @@ metadata:
   name: python-lb
   namespace: green
 spec:
-  type: LoadBalancer
-  loadBalancerIP: 35.241.163.112
-  ports:
-    - port: 80
-      targetPort: 80
+  type: NodePort
+  ports:  
+  - port: 80
+    targetPort: 80
+    nodePort: 30042
   selector:
     component: python-label
